WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96384
[WK2][WTR] Some of TestRunner special options are not reset before testing
https://bugs.webkit.org/show_bug.cgi?id=96384
Summary
[WK2][WTR] Some of TestRunner special options are not reset before testing
Mikhail Pozdnyakov
Reported
2012-09-11 07:03:15 PDT
Some of TestRunner special options are not reset before testing causing flakiness.
Attachments
patch
(2.45 KB, patch)
2012-09-11 07:09 PDT
,
Mikhail Pozdnyakov
kenneth
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
rebased
(2.38 KB, patch)
2012-09-12 00:05 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-09-11 07:09:38 PDT
Created
attachment 163356
[details]
patch
WebKit Review Bot
Comment 2
2012-09-11 08:30:02 PDT
Comment on
attachment 163356
[details]
patch Rejecting
attachment 163356
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: /mnt/git/webkit-commit-queue Parsed 2 diffs from patch file(s). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp Hunk #1 FAILED at 241. 1 out of 1 hunk FAILED -- saving rejects to file Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Kenneth Ro..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output:
http://queues.webkit.org/results/13820400
Mikhail Pozdnyakov
Comment 3
2012-09-12 00:05:04 PDT
Created
attachment 163529
[details]
rebased
WebKit Review Bot
Comment 4
2012-09-12 00:39:29 PDT
Comment on
attachment 163529
[details]
rebased Clearing flags on attachment: 163529 Committed
r128272
: <
http://trac.webkit.org/changeset/128272
>
WebKit Review Bot
Comment 5
2012-09-12 00:39:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug