[WK2][WTR] Some of TestRunner special options are not reset before testing https://bugs.webkit.org/show_bug.cgi?id=96384

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-09-12
Reviewed by Kenneth Rohde Christiansen.

Now values of the following special options are reset:
void setAcceptsEditing(in boolean value);
void setCloseRemainingWindowsWhenComplete(in boolean value);
void setXSSAuditorEnabled(in boolean value);
void setAllowFileAccessFromFileURLs(in boolean value);
void setPluginsEnabled(in boolean value);
void setPopupBlockingEnabled(in boolean value);

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::beginTesting):

Canonical link: https://commits.webkit.org/114364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128272 268f45cc-cd09-0410-ab3c-d52691b4dbfc